--- a/style/estructura.css
+++ b/style/estructura.css
@@ -95,7 +95,7 @@
 }
 :root {
     --color-primario: #1D1D1D;
-    --color-secundario: linear-gradient(302deg, rgba(170,119,186,1) 0%, rgba(194,109,80,1) 100%);
+    --color-secundario: linear-gradient(302deg, rgba(170,119,186,1) 0%, #1E90FF 100%);
     --color-terciario: #151515;
     --color-blanco: #FFFFFF;
     --color-negro: #000000;
@@ -104,7 +104,7 @@
 article {
     border: 8px solid transparent;
     clear: both;
-    border-image: linear-gradient(302deg, rgba(170,119,186,1) 0%, rgba(194,109,80,1) 100%) 1;
+    border-image: linear-gradient(302deg, rgba(170,119,186,1) 0%, #1E90FF 100%) 1;
 }
 #fondo {
   color: var(--color-blanco);
@@ -122,7 +122,7 @@ article {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-size: 5.5em;
   padding-top: 15%;
-  background: linear-gradient(302deg, rgba(170, 119, 186, 1) 0%, rgba(194, 109, 80, 1) 100%);
+  background: linear-gradient(302deg, rgba(170, 119, 186, 1) 0%, #1E90FF 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
@@ -192,7 +192,7 @@ section img{
   flex-direction: row;
 }
 .custom-button{
-    background: linear-gradient(302deg, rgba(170,119,186,1) 0%, rgba(194,109,80,1) 100%);
+    background: linear-gradient(302deg, rgba(170,119,186,1) 0%, #1E90FF 100%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     background-clip: text;
@@ -374,7 +374,7 @@ section img{
 }
 
 .nav-title-minimized:hover {
-    background: linear-gradient(302deg, rgba(170,119,186,1) 0%, rgba(194,109,80,1) 100%);
+    background: linear-gradient(302deg, rgba(170,119,186,1) 0%, #1E90FF 100%);
 }
 
 .browser-window {
